--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
   },
   "homepage": "https://github.com/tigercosmos/thumbnail-server#readme",
   "dependencies": {
+    "amqplib": "^0.8.0",
     "axios": "^0.21.1",
     "express": "^4.17.3",
     "forever": "^4.0.1",
     "node-color-log": "^9.0.0",
+    "redis": "^4.0.6",
     "sharp": "^0.30.4",
     "uuid": "^8.3.2"
   },
