--- a/docker-compose-test.yml
+++ b/docker-compose-test.yml
@@ -13,7 +13,7 @@ services:
     links:
       - rabbitmq
       - redis
-    command: sh -c './wait-for-it.sh rabbitmq:5672 --timeout=30 -- npm start'
+    command: sh -c './wait-for-it.sh rabbitmq:5672 --timeout=30 -- npm test'
 
   redis:
     image: redislabs/rejson:latest
