--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "axios": "^0.21.1",
     "express": "^4.17.3",
     "forever": "^4.0.1",
+    "multer": "^1.4.4",
     "node-color-log": "^9.0.0",
     "redis": "^4.0.6",
     "sharp": "^0.30.4",
